--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "pinia": "^3.0.1",
+    "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vuetify": "^3.8.2"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@playwright/test": "^1.51.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
