--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,9 +14,11 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "pinia": "^3.0.1",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.8.2"
   },
   "devDependencies": {
