--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,11 +4,12 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   }
 }
